--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
 	<br />
 	<br />
 	<br />
-	<form name="pointform" method="post">
-		<textarea name="input" ></textarea>
-	</form>
+		<textarea id="input" name="input" rows="7" cols="100" ></textarea>
 </body>
+</html>
 </html>
